# lf2x

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md
mappings/: README.md  components.yaml
src/lf2x/: __about__.py  __init__.py  analyzer.py  cli.py  config.py  converter.py  ir.py  langflow_schema.py  mapping_registry.py  naming.py  parser.py  reporting.py  rest_client.py
src/lf2x/extractors/: __init__.py  secrets.py
src/lf2x/generators/: __init__.py  langchain.py  langgraph.py  project.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_converter.py  test_extractors_secrets.py  test_generators_langchain.py  test_generators_langgraph.py  test_generators_project.py  test_ir.py  test_mapping_registry.py  test_package.py  test_parser.py  test_rest_client.py
tests/fixtures/flows/: price_deal_finder.json  research_translation_loop.json  simple_passthrough.json
